...
                    .frame(maxWidth: .infinity)
                    .padding()
                    .background(Theme.primaryColor(for: colorScheme))
                    .foregroundColor(Theme.backgroundColor(for: colorScheme))
                    .cornerRadius(12)
                }
                .accessibilityIdentifier("pay_now_button")
                .padding(.horizontal)
                .padding(.bottom, 20)
                .disabled(viewModel.isLoading)
            }
        }
        .onAppear {
...
